// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthenticatorWrapper test render test render correctly 1`] = `
<div>
  <Authenticator
    onStateChange={[Function]}
  >
    <Component />
  </Authenticator>
</div>
`;

exports[`hoc tests withAuthenticator test when not signed in 1`] = `
<Authenticator
  amplifyConfig="amplifyConfig"
  federated={null}
  hideDefault={false}
  onStateChange={[Function]}
  theme={null}
/>
`;

exports[`hoc tests withAuthenticator test when signed in 1`] = `
<div>
  <MockComp
    authData={null}
    authState="signedIn"
    onStateChange={[Function]}
  />
</div>
`;
